--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ aiosignal==1.3.1
 async-timeout==4.0.2
 attrs==22.2.0
 charset-normalizer==2.1.1
+colorama==0.4.6
 fake-useragent==1.1.1
 frozenlist==1.3.3
 idna==3.4
