--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,34 @@
-aiohttp==3.8.3
+aiohttp==3.8.6
 aiohttp-proxy==0.1.2
 aiosignal==1.3.1
-async-timeout==4.0.2
-attrs==22.2.0
-charset-normalizer==2.1.1
+alabaster==0.7.13
+async-timeout==4.0.3
+asyncio==3.4.3
+attrs==23.1.0
+Babel==2.13.0
+certifi==2023.7.22
+charset-normalizer==3.3.0
 colorama==0.4.6
-fake-useragent==1.1.1
-frozenlist==1.3.3
+docutils==0.20.1
+fake-useragent==1.3.0
+frozenlist==1.4.0
 idna==3.4
+imagesize==1.4.1
+Jinja2==3.1.2
+logging==0.4.9.6
+MarkupSafe==2.1.3
 multidict==6.0.4
-yarl==1.8.2
+packaging==23.2
+PyEventEmitter==1.0.5
+Pygments==2.16.1
+requests==2.31.0
+snowballstemmer==2.2.0
+Sphinx==7.2.6
+sphinxcontrib-applehelp==1.0.7
+sphinxcontrib-devhelp==1.0.5
+sphinxcontrib-htmlhelp==2.0.4
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.6
+sphinxcontrib-serializinghtml==1.1.9
+urllib3==2.0.6
+yarl==1.9.2
