--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+about-time==4.2.1
 aiohttp==3.8.6
 aiohttp-proxy==0.1.2
 aiosignal==1.3.1
@@ -5,13 +6,18 @@ alabaster==0.7.13
 async-timeout==4.0.3
 asyncio==3.4.3
 attrs==23.1.0
+autodoc==0.5.0
 Babel==2.13.0
+beautifulsoup4==4.12.2
 certifi==2023.7.22
 charset-normalizer==3.3.0
 colorama==0.4.6
+commonmark==0.9.1
+decorator==5.1.1
 docutils==0.20.1
 fake-useragent==1.3.0
 frozenlist==1.4.0
+grapheme==0.6.0
 idna==3.4
 imagesize==1.4.1
 Jinja2==3.1.2
@@ -21,14 +27,21 @@ multidict==6.0.4
 packaging==23.2
 PyEventEmitter==1.0.5
 Pygments==2.16.1
+recommonmark==0.7.1
 requests==2.31.0
 snowballstemmer==2.2.0
+soupsieve==2.5
 Sphinx==7.2.6
+sphinx-markdown-builder==0.6.5
 sphinxcontrib-applehelp==1.0.7
 sphinxcontrib-devhelp==1.0.5
 sphinxcontrib-htmlhelp==2.0.4
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.6
 sphinxcontrib-serializinghtml==1.1.9
+tabulate==0.9.0
 urllib3==2.0.6
+waitress==2.1.2
+WebOb==1.8.7
+WebTest==3.0.0
 yarl==1.9.2
