Исправил ошибки с созданием архива с пакетом, убрал оттуда документацию github

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
 include README.md requirements.txt
 recursive-exclude docs *
-recursive-include docs/_build/markdown *
-exclude .gitignore proxies-taster logger.py Makefile requirements.txt
+recursive-exclude dist *
+exclude .gitignore proxies-taster proxies_parser_logger.py Makefile requirements.txt
