--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.6
 sphinxcontrib-serializinghtml==1.1.9
 tabulate==0.9.0
+tqdm==4.66.1
 urllib3==2.0.6
 waitress==2.1.2
 WebOb==1.8.7
